horizontal spacing fix

--- a/src/interface/src/styleguide/scenario-card/scenario-card.component.scss
+++ b/src/interface/src/styleguide/scenario-card/scenario-card.component.scss
@@ -32,9 +32,19 @@
     flex-direction: row;
     gap: 1em;
   }
+  .controls-section {
+    display: flex;
+    flex-direction: row;
+    gap: 0;
+  }
 
   .name-header {
     @include h4();
+  }
+
+  .more-button {
+    border: none;
+    background-color: white;
   }
 
   .detail-row {
